fix pull to refresh issue on Safari

--- a/css/base/common.scss
+++ b/css/base/common.scss
@@ -31,6 +31,7 @@ html {
   width: 100%;
   height: 100%;
   overflow-y: hidden; //Needed so that swiping up doesn't refresh the page on mobile Chrome
+  touch-action: none;
 }
 
 body {
